Official Changelog for ephFrame PHP Framework
==============================================================================

# 2009-12-09
* Session.ttl can change session cookielifetime with ease now
* removed js-libs from js directory

# 2009-11-29
* Elements are called by ->element($name) instead of renderElement

# 2009-11-24
* Form Fields that are mandatory have 'mandatory' as class
* Form not having name="[classname]" anymore because was invalid
* View and layout use contentType set in controller
* HTTPHeader renders array of headers when passed to send
* Mandatory fields that are not from a model get mandatory = false now

# 2009-11-18 #
* changed code.ephigeniad.de to code.marceleichner.de
* CURL uses CONNECTTIMEOUT now
* I18n sets locale for usage in dates with LC_ALL as default
* I18n default language is now defined with I18n.language
* Session name is also stored in Session.name in config now
* Model->findAllby adds modelname to fieldname if field is column of model

# 2009-11-04 #
* Form->addField accepts label = false in the attributes to disable label usage
* String::substitue does not use \p{L} unicode class for replacement anymore
* Rendering and View filename finding in View Class refactored
* Elements that are missing throwing exceptions now
* Removed Bug where view is rendered twice!
* Changed code.moresleep.net back to code.marceleichner.de
* Javascript helper loads external urls before local files
* Fixed bug in IndexedArray->rand when returning 1 random element

# 2009-10-21 #
* added beforeRedirect callback that is called on every component before redirect headers are send in the controller, note that afterRender is _not_ called when a redirect is called
* removed $glue parameter from File->append
* Model->toArray accepts first parameter with fieldnames in it that will be used in array creation

# 2009-10-11 #
* ->unbind('all') removes all bindings from a model
* Directories can be created by simply calling ->create on them