@@ -1,2 +1,0 @@
-ephFrame PHP Framework Readme File
-==============================================================================
