@@ -1,0 +1,17 @@
+ephFrame PHP Framework Readme File
+==============================================================================
+
+# Start new Project #
+
+1.	Copy app-Folder to new location
+	
+	First you need to open a bash-shell in the location where your ephFrame
+	directory is. Then run this command:
+	
+		$ rsync -rvcu --progress --cvs-exclude --exclude-from=exclude.txt app/* [target]
+
+2.	Modify ephFrame-Path
+
+	Open the ephFrame.php file in your new application html/ directory and
+	modfiy require statement to find the ephFrame framework startup.php
+	script.
